my-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3tier-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 3tier-backend
  template:
    metadata:
      labels:
        app: 3tier-backend
    spec:
      containers:
      - name: backend
        image: backend-flask:latest
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: 3tier-backend
  ports:
  - port: 5000
    targetPort: 5000
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3tier-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: 3tier-frontend
  template:
    metadata:
      labels:
        app: 3tier-frontend
    spec:
      containers:
      - name: frontend
        image: frontend-html:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: 3tier-frontend
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  selector:
    app: mysql
  ports:
  - port: 3306
    targetPort: 3306
  type: ClusterIP
